<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pidsel"/>
    <Spinner android:id="@+id/pidSelect" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kp"/>
    <EditText android:id="@+id/kp" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="none|number|numberSigned|numberDecimal">
        <requestFocus/>
    </EditText>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ki"/>
    <EditText android:id="@+id/ki" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="none|number|numberSigned|numberDecimal"/>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/kd"/>
    <EditText android:id="@+id/kd" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="none|number|numberSigned|numberDecimal"/>
    <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ip"/>
    <EditText android:id="@+id/ipaddr" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal"/>
    <Button android:id="@+id/doupdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/doup"/>
</LinearLayout>
